更新多语言

--- a/privacy_en.html
+++ b/privacy_en.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>StudyTime - Privacy Policy</title>
+    <title>FocusCroc - Privacy Policy</title>
     <style>
         * {
             margin: 0;
@@ -149,7 +149,7 @@
             <a href="privacy_zh.html">中文版本</a>
         </div>
         
-        <h1>StudyTime Privacy Policy</h1>
+        <h1>FocusCroc Privacy Policy</h1>
         
         <div class="meta">
             <p><strong>Last Updated:</strong> December 17, 2025</p>
@@ -157,7 +157,7 @@
         </div>
 
         <h2>1. Introduction</h2>
-        <p>Welcome to StudyTime (hereinafter referred to as "the App"). This Privacy Policy is intended to inform you about how we collect, use, store, and protect your personal information. By using the App, you agree to the data processing practices described in this Privacy Policy.</p>
+        <p>Welcome to FocusCroc (hereinafter referred to as "the App"). This Privacy Policy is intended to inform you about how we collect, use, store, and protect your personal information. By using the App, you agree to the data processing practices described in this Privacy Policy.</p>
         <p>The App is developed and operated by RikSong. If you have any questions about this Privacy Policy, please contact us through the contact information provided at the end of this policy.</p>
 
         <hr>
@@ -312,7 +312,7 @@
         <ol>
             <li>Open iPhone "Settings"</li>
             <li>Tap your name &gt; "Subscriptions"</li>
-            <li>Select StudyTime Pro</li>
+            <li>Select FocusCroc Pro</li>
             <li>Tap "Cancel Subscription"</li>
         </ol>
 
@@ -348,7 +348,7 @@
         <div class="footer">
             <p>Privacy Policy Version: 1.0</p>
             <p>Effective Date: December 17, 2025</p>
-            <p style="margin-top: 20px;">© 2025 StudyTime. All rights reserved.</p>
+            <p style="margin-top: 20px;">© 2025 FocusCroc. All rights reserved.</p>
         </div>
     </div>
 </body>
