--- a/privacy_zh.html
+++ b/privacy_zh.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>学点时间 - 隐私政策</title>
+    <title>番茄鳄 - 隐私政策</title>
     <style>
         * {
             margin: 0;
@@ -149,7 +149,7 @@
             <a href="privacy_en.html">English Version</a>
         </div>
         
-        <h1>学点时间 隐私政策</h1>
+        <h1>番茄鳄 隐私政策</h1>
         
         <div class="meta">
             <p><strong>最后更新日期：</strong>2025年12月17日</p>
@@ -157,7 +157,7 @@
         </div>
 
         <h2>1. 引言</h2>
-        <p>欢迎使用 学点时间（以下简称"本应用"）。本隐私政策旨在告知您我们如何收集、使用、存储和保护您的个人信息。使用本应用即表示您同意本隐私政策中描述的数据处理方式。</p>
+        <p>欢迎使用 番茄鳄（以下简称"本应用"）。本隐私政策旨在告知您我们如何收集、使用、存储和保护您的个人信息。使用本应用即表示您同意本隐私政策中描述的数据处理方式。</p>
         <p>本应用由 RikSong 开发和运营。如果您对本隐私政策有任何疑问，请通过本政策末尾提供的联系方式与我们联系。</p>
 
         <hr>
@@ -312,7 +312,7 @@
         <ol>
             <li>打开 iPhone 的"设置"</li>
             <li>点击您的姓名 &gt; "订阅"</li>
-            <li>选择 学点时间 Pro</li>
+            <li>选择 番茄鳄 Pro</li>
             <li>点击"取消订阅"</li>
         </ol>
 
@@ -348,7 +348,7 @@
         <div class="footer">
             <p>本隐私政策版本：1.0</p>
             <p>生效日期：2025年12月17日</p>
-            <p style="margin-top: 20px;">© 2025 学点时间. All rights reserved.</p>
+            <p style="margin-top: 20px;">© 2025 番茄鳄. All rights reserved.</p>
         </div>
     </div>
 </body>
