--- a/terms_en.html
+++ b/terms_en.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>StudyTime - Terms of Service</title>
+    <title>FocusCroc - Terms of Service</title>
     <style>
         * {
             margin: 0;
@@ -206,7 +206,7 @@
             <a href="terms_zh.html">中文版本</a>
         </div>
         
-        <h1>StudyTime Terms of Service</h1>
+        <h1>FocusCroc Terms of Service</h1>
         
         <div class="meta">
             <p><strong>Last Updated:</strong> December 17, 2025</p>
@@ -214,13 +214,13 @@
         </div>
 
         <div class="intro">
-            <p>Please read the following Terms of Service (hereinafter referred to as "these Terms") carefully. By using the StudyTime application (hereinafter referred to as "the App"), you agree to be bound by these Terms. If you do not agree to any part of these Terms, please do not use the App.</p>
+            <p>Please read the following Terms of Service (hereinafter referred to as "these Terms") carefully. By using the FocusCroc application (hereinafter referred to as "the App"), you agree to be bound by these Terms. If you do not agree to any part of these Terms, please do not use the App.</p>
         </div>
 
         <h2>1. Service Description</h2>
 
         <h3>1.1 Service Content</h3>
-        <p>StudyTime is a study time management application that provides the following features:</p>
+        <p>FocusCroc is a study time management application that provides the following features:</p>
         <ul>
             <li>Study timer (free mode and Pomodoro mode)</li>
             <li>Study records and statistical analysis</li>
@@ -230,7 +230,7 @@
         </ul>
 
         <h3>1.2 Service Types</h3>
-        <p>The App offers both a free version and a paid subscription version (StudyTime Pro).</p>
+        <p>The App offers both a free version and a paid subscription version (FocusCroc Pro).</p>
 
         <hr>
 
@@ -261,7 +261,7 @@
         <h2>3. Pro Membership Subscription</h2>
 
         <h3>3.1 Subscription Services</h3>
-        <p>StudyTime Pro offers enhanced features, including but not limited to:</p>
+        <p>FocusCroc Pro offers enhanced features, including but not limited to:</p>
         <ul>
             <li>Full historical data access</li>
             <li>Unlimited study circle joining</li>
@@ -315,7 +315,7 @@
             <li>Open iPhone "Settings"</li>
             <li>Tap your name</li>
             <li>Tap "Subscriptions"</li>
-            <li>Select StudyTime Pro</li>
+            <li>Select FocusCroc Pro</li>
             <li>Choose to cancel subscription or change subscription plan</li>
         </ol>
 
@@ -524,7 +524,7 @@
                 </tr>
                 <tr>
                     <td>Subscription Name</td>
-                    <td>StudyTime Pro</td>
+                    <td>FocusCroc Pro</td>
                 </tr>
                 <tr>
                     <td>Subscription Types</td>
@@ -561,7 +561,7 @@
         <div class="footer">
             <p>Terms of Service Version: 1.0</p>
             <p>Effective Date: December 17, 2025</p>
-            <p style="margin-top: 20px;">© 2025 StudyTime. All rights reserved.</p>
+            <p style="margin-top: 20px;">© 2025 FocusCroc. All rights reserved.</p>
         </div>
     </div>
 </body>
