--- a/terms_zh.html
+++ b/terms_zh.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>学点时间 - 使用条款</title>
+    <title>番茄鳄 - 使用条款</title>
     <style>
         * {
             margin: 0;
@@ -206,7 +206,7 @@
             <a href="terms_en.html">English Version</a>
         </div>
         
-        <h1>学点时间 使用条款</h1>
+        <h1>番茄鳄 使用条款</h1>
         
         <div class="meta">
             <p><strong>最后更新日期：</strong>2025年12月17日</p>
@@ -214,13 +214,13 @@
         </div>
 
         <div class="intro">
-            <p>请仔细阅读以下使用条款（以下简称"本条款"）。使用 学点时间 应用程序（以下简称"本应用"）即表示您同意受本条款的约束。如果您不同意本条款的任何部分，请勿使用本应用。</p>
+            <p>请仔细阅读以下使用条款（以下简称"本条款"）。使用 番茄鳄 应用程序（以下简称"本应用"）即表示您同意受本条款的约束。如果您不同意本条款的任何部分，请勿使用本应用。</p>
         </div>
 
         <h2>1. 服务说明</h2>
 
         <h3>1.1 服务内容</h3>
-        <p>学点时间 是一款学习时间管理应用程序，提供以下功能：</p>
+        <p>番茄鳄 是一款学习时间管理应用程序，提供以下功能：</p>
         <ul>
             <li>学习计时器（自由模式和番茄钟模式）</li>
             <li>学习记录和统计分析</li>
@@ -230,7 +230,7 @@
         </ul>
 
         <h3>1.2 服务类型</h3>
-        <p>本应用提供免费版和付费订阅版（学点时间 Pro）两种服务类型。</p>
+        <p>本应用提供免费版和付费订阅版（番茄鳄 Pro）两种服务类型。</p>
 
         <hr>
 
@@ -261,7 +261,7 @@
         <h2>3. Pro 会员订阅</h2>
 
         <h3>3.1 订阅服务</h3>
-        <p>学点时间 Pro 提供增强功能，包括但不限于：</p>
+        <p>番茄鳄 Pro 提供增强功能，包括但不限于：</p>
         <ul>
             <li>完整历史数据访问</li>
             <li>无限学习圈加入</li>
@@ -315,7 +315,7 @@
             <li>打开 iPhone "设置"</li>
             <li>点击您的姓名</li>
             <li>点击"订阅"</li>
-            <li>选择 学点时间 Pro</li>
+            <li>选择 番茄鳄 Pro</li>
             <li>选择取消订阅或更改订阅计划</li>
         </ol>
 
@@ -524,7 +524,7 @@
                 </tr>
                 <tr>
                     <td>订阅名称</td>
-                    <td>学点时间 Pro</td>
+                    <td>番茄鳄 Pro</td>
                 </tr>
                 <tr>
                     <td>订阅类型</td>
@@ -561,7 +561,7 @@
         <div class="footer">
             <p>本使用条款版本：1.0</p>
             <p>生效日期：2025年12月17日</p>
-            <p style="margin-top: 20px;">© 2025 学点时间. All rights reserved.</p>
+            <p style="margin-top: 20px;">© 2025 番茄鳄. All rights reserved.</p>
         </div>
     </div>
 </body>
