更新区域描述

--- a/privacy_ar.html
+++ b/privacy_ar.html
@@ -56,7 +56,7 @@
 
         <h2>4. التخزين والأمان</h2>
         <ul>
-            <li>التخزين المحلي والسحابي (Supabase، AWS مومباي)</li>
+            <li>التخزين المحلي والسحابي (Supabase، AWS سنغافورة)</li>
             <li>تشفير SSL/TLS، كلمات مرور مشفرة</li>
         </ul>
 
