--- a/privacy_de.html
+++ b/privacy_de.html
@@ -56,7 +56,7 @@
 
         <h2>4. Speicherung und Sicherheit</h2>
         <ul>
-            <li>Lokale und Cloud-Speicherung (Supabase, AWS Mumbai)</li>
+            <li>Lokale und Cloud-Speicherung (Supabase, AWS Singapur)</li>
             <li>SSL/TLS-Verschlüsselung, verschlüsselte Passwörter</li>
         </ul>
 
