--- a/privacy_en.html
+++ b/privacy_en.html
@@ -218,7 +218,7 @@
         <h3>4.1 Data Storage</h3>
         <ul>
             <li><strong>Local Storage</strong>: Some study data is stored locally on your device to support offline use.</li>
-            <li><strong>Cloud Storage</strong>: To enable data synchronization and study circle features, we use Supabase cloud services to store your data. Servers are located in AWS ap-south-1 (Mumbai, India).</li>
+            <li><strong>Cloud Storage</strong>: To enable data synchronization and study circle features, we use Supabase cloud services to store your data. Servers are located in AWS ap-southeast-1 (Singapore).</li>
         </ul>
 
         <h3>4.2 Data Security Measures</h3>
