--- a/privacy_es.html
+++ b/privacy_es.html
@@ -100,7 +100,7 @@
         <h3>4.1 Almacenamiento de Datos</h3>
         <ul>
             <li><strong>Almacenamiento Local</strong>: Algunos datos de estudio se almacenan localmente para soportar uso sin conexión.</li>
-            <li><strong>Almacenamiento en la Nube</strong>: Utilizamos servicios de Supabase para almacenar sus datos. Los servidores están ubicados en AWS ap-south-1 (Mumbai, India).</li>
+            <li><strong>Almacenamiento en la Nube</strong>: Utilizamos servicios de Supabase para almacenar sus datos. Los servidores están ubicados en AWS ap-southeast-1 (Singapur).</li>
         </ul>
 
         <h3>4.2 Medidas de Seguridad de Datos</h3>
