--- a/privacy_fr.html
+++ b/privacy_fr.html
@@ -60,7 +60,7 @@
 
         <h2>4. Stockage et Sécurité</h2>
         <ul>
-            <li>Stockage local et cloud (Supabase, AWS Mumbai)</li>
+            <li>Stockage local et cloud (Supabase, AWS Singapour)</li>
             <li>Cryptage SSL/TLS, mots de passe cryptés</li>
         </ul>
 
