--- a/privacy_hi.html
+++ b/privacy_hi.html
@@ -56,7 +56,7 @@
 
         <h2>4. भंडारण और सुरक्षा</h2>
         <ul>
-            <li>स्थानीय और क्लाउड स्टोरेज (Supabase, AWS मुंबई)</li>
+            <li>स्थानीय और क्लाउड स्टोरेज (Supabase, AWS सिंगापुर)</li>
             <li>SSL/TLS एन्क्रिप्शन, एन्क्रिप्टेड पासवर्ड</li>
         </ul>
 
