--- a/privacy_ja.html
+++ b/privacy_ja.html
@@ -100,7 +100,7 @@
         <h3>4.1 データの保存</h3>
         <ul>
             <li><strong>ローカル保存</strong>：一部の学習データは、オフライン使用をサポートするためにデバイスにローカルに保存されます。</li>
-            <li><strong>クラウド保存</strong>：データ同期と学習サークル機能を実現するため、Supabaseクラウドサービスを使用してデータを保存します。サーバーはAWS ap-south-1（インド・ムンバイ）に設置されています。</li>
+            <li><strong>クラウド保存</strong>：データ同期と学習サークル機能を実現するため、Supabaseクラウドサービスを使用してデータを保存します。サーバーはAWS ap-southeast-1（シンガポール）に設置されています。</li>
         </ul>
 
         <h3>4.2 データセキュリティ対策</h3>
