--- a/privacy_ko.html
+++ b/privacy_ko.html
@@ -100,7 +100,7 @@
         <h3>4.1 데이터 저장</h3>
         <ul>
             <li><strong>로컬 저장</strong>: 일부 학습 데이터는 오프라인 사용을 지원하기 위해 기기에 로컬로 저장됩니다.</li>
-            <li><strong>클라우드 저장</strong>: 데이터 동기화 및 학습 서클 기능을 위해 Supabase 클라우드 서비스를 사용하여 데이터를 저장합니다. 서버는 AWS ap-south-1(인도 뭄바이)에 위치합니다.</li>
+            <li><strong>클라우드 저장</strong>: 데이터 동기화 및 학습 서클 기능을 위해 Supabase 클라우드 서비스를 사용하여 데이터를 저장합니다. 서버는 AWS ap-southeast-1(싱가포르)에 위치합니다.</li>
         </ul>
 
         <h3>4.2 데이터 보안 조치</h3>
