--- a/privacy_pt.html
+++ b/privacy_pt.html
@@ -56,7 +56,7 @@
 
         <h2>4. Armazenamento e Segurança</h2>
         <ul>
-            <li>Armazenamento local e em nuvem (Supabase, AWS Mumbai)</li>
+            <li>Armazenamento local e em nuvem (Supabase, AWS Singapura)</li>
             <li>Criptografia SSL/TLS, senhas criptografadas</li>
         </ul>
 
