--- a/privacy_ru.html
+++ b/privacy_ru.html
@@ -56,7 +56,7 @@
 
         <h2>4. Хранение и безопасность</h2>
         <ul>
-            <li>Локальное и облачное хранение (Supabase, AWS Mumbai)</li>
+            <li>Локальное и облачное хранение (Supabase, AWS Сингапур)</li>
             <li>Шифрование SSL/TLS, зашифрованные пароли</li>
         </ul>
 
