--- a/privacy_zh-Hant.html
+++ b/privacy_zh-Hant.html
@@ -101,7 +101,7 @@
         <h3>4.1 資料儲存</h3>
         <ul>
             <li><strong>本地儲存</strong>：部分學習資料儲存在您的裝置本地，以支援離線使用。</li>
-            <li><strong>雲端儲存</strong>：為了實現資料同步和學習圈功能，我們使用 Supabase 雲端服務儲存您的資料。伺服器位於 AWS ap-south-1（印度孟買）。</li>
+            <li><strong>雲端儲存</strong>：為了實現資料同步和學習圈功能，我們使用 Supabase 雲端服務儲存您的資料。伺服器位於 AWS ap-southeast-1（新加坡）。</li>
         </ul>
 
         <h3>4.2 資料安全措施</h3>
