--- a/privacy_zh.html
+++ b/privacy_zh.html
@@ -218,7 +218,7 @@
         <h3>4.1 数据存储</h3>
         <ul>
             <li><strong>本地存储</strong>：部分学习数据会存储在您的设备本地，支持离线使用。</li>
-            <li><strong>云端存储</strong>：为了实现数据同步和学习圈功能，我们使用 Supabase 云服务存储您的数据。服务器位于 AWS ap-south-1（印度孟买）。</li>
+            <li><strong>云端存储</strong>：为了实现数据同步和学习圈功能，我们使用 Supabase 云服务存储您的数据。服务器位于 AWS ap-southeast-1（新加坡）。</li>
         </ul>
 
         <h3>4.2 数据安全措施</h3>
